--- a/AutomationTestAssistant/AutomationTestAssistantDesktopApp/App.config
+++ b/AutomationTestAssistant/AutomationTestAssistantDesktopApp/App.config
@@ -2,19 +2,21 @@
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
     <add name="ATAEntities" connectionString="metadata=res://*/ATADataModel.csdl|res://*/ATADataModel.ssdl|res://*/ATADataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=AANGELOV-PC;initial catalog=AutomationTestAssistant;Trusted_Connection=True;User Id=telerik;Password=telerik;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
   </entityFramework>
   <system.net>
     <mailSettings>
       <smtp from="automationTestAssistant@angelov.com" deliveryMethod="Network">
-        <network host="smtp.gmail.com" port="587"
-            userName="angelov.st.anton@gmail.com" password="gthesecret" enableSsl="true"/>
+        <network host="smtp.gmail.com" port="587" userName="angelov.st.anton@gmail.com" password="gthesecret" enableSsl="true" />
       </smtp>
     </mailSettings>
   </system.net>
