--- a/AutomationTestAssistant/AutomationTestAssistantDesktopApp/packages.config
+++ b/AutomationTestAssistant/AutomationTestAssistantDesktopApp/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
-  <package id="log4net" version="2.0.0" targetFramework="net45" />
-  <package id="ModernUI.WPF" version="1.0.3" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
+  <package id="log4net" version="2.0.3" targetFramework="net45" />
+  <package id="ModernUI.WPF" version="1.0.6" targetFramework="net45" />
+  <package id="System.Windows.Controls.DataVisualization.Toolkit" version="4.0.0.0" targetFramework="net45" />
 </packages>
