add console logger for jenkins

--- a/AutomationTestAssistant/TestEncryption/TestEncryption.csproj
+++ b/AutomationTestAssistant/TestEncryption/TestEncryption.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EncryptorTest.cs" />
+    <Compile Include="Log.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
