--- a/AAngelov.Utilities/AAngelov.Utilities.Test/AAngelov.Utilities.Test.csproj
+++ b/AAngelov.Utilities/AAngelov.Utilities.Test/AAngelov.Utilities.Test.csproj
@@ -40,13 +40,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CustomAutoMapper.cs" />
+    <Compile Include="ReducedAutoMapper.cs" />
+    <Compile Include="ReducedAutoMapperExtended.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validators\DateTimeAssert.cs" />
     <Compile Include="Validators\PropertiesValidator.cs" />
     <Compile Include="Validators\Enums\DateTimeDeltaType.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
