--- a/PatternsInAutomation.Tests/PatternsInAutomation.Tests/PatternsInAutomation.Tests.csproj
+++ b/PatternsInAutomation.Tests/PatternsInAutomation.Tests/PatternsInAutomation.Tests.csproj
@@ -37,11 +37,13 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
-    <Reference Include="WebDriver">
-      <HintPath>..\packages\Selenium.WebDriver.2.42.0\lib\net40\WebDriver.dll</HintPath>
+    <Reference Include="WebDriver, Version=2.45.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Selenium.WebDriver.2.45.0\lib\net40\WebDriver.dll</HintPath>
     </Reference>
-    <Reference Include="WebDriver.Support">
-      <HintPath>..\packages\Selenium.Support.2.42.0\lib\net40\WebDriver.Support.dll</HintPath>
+    <Reference Include="WebDriver.Support, Version=2.45.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Selenium.Support.2.45.0\lib\net40\WebDriver.Support.dll</HintPath>
     </Reference>
   </ItemGroup>
   <Choose>
@@ -57,9 +59,25 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Advanced\AdvancedBingSingletonTests.cs" />
+    <Compile Include="Advanced\Core\Fluent\BaseFluentPageSingleton.cs" />
+    <Compile Include="Advanced\Core\Fluent\BasePageElementMap.cs" />
+    <Compile Include="Advanced\Core\Fluent\BasePageValidator.cs" />
+    <Compile Include="Advanced\FluentBingTests.cs" />
+    <Compile Include="Advanced\Base\ThreadSafeNestedContructorsBaseSingleton.cs" />
+    <Compile Include="Advanced\Base\ThreadSafeLazyBaseSingleton.cs" />
+    <Compile Include="Advanced\Base\ThreadSafeBaseSingleton.cs" />
+    <Compile Include="Advanced\Base\NonThreadSafeBaseSingleton.cs" />
+    <Compile Include="Advanced\BingMainPageSingletonDerived\BingMainPage.cs" />
+    <Compile Include="Advanced\BingMainPageSingletonDerived\BingMainPageElementMap.cs" />
+    <Compile Include="Advanced\BingMainPageSingletonDerived\BingMainPageValidator.cs" />
+    <Compile Include="Advanced\BingMainPageSingletonBuiltIn\BingMainPage.cs" />
+    <Compile Include="Advanced\BingMainPageSingletonBuiltIn\BingMainPageElementMap.cs" />
+    <Compile Include="Advanced\BingMainPageSingletonBuiltIn\BingMainPageValidator.cs" />
     <Compile Include="Advanced\BingMainPage\BingMainPage.cs" />
     <Compile Include="Advanced\BingMainPage\BingMainPageElementMap.cs" />
     <Compile Include="Advanced\BingMainPage\BingMainPageValidator.cs" />
+    <Compile Include="Advanced\Core\BasePageSingletonDerived.cs" />
     <Compile Include="Advanced\Core\BrowserTypes.cs" />
     <Compile Include="Advanced\Core\Driver.cs" />
     <Compile Include="Advanced\Core\BasePage.cs" />
@@ -82,6 +100,16 @@
     <Compile Include="Advanced\Ebay\PurchaseFacade.cs" />
     <Compile Include="Advanced\EbayPurchase_PurchaseFaceade_Tests.cs" />
     <Compile Include="Advanced\AdvancedBingTests.cs" />
+    <Compile Include="Advanced\Fluent\BingMainPage\BingMainPage.cs" />
+    <Compile Include="Advanced\Fluent\BingMainPage\BingMainPageElementMap.cs" />
+    <Compile Include="Advanced\Fluent\BingMainPage\BingMainPageValidator.cs" />
+    <Compile Include="Advanced\Fluent\Enums\Licenses.cs" />
+    <Compile Include="Advanced\Fluent\Enums\Dates.cs" />
+    <Compile Include="Advanced\Fluent\Enums\People.cs" />
+    <Compile Include="Advanced\Fluent\Enums\Layouts.cs" />
+    <Compile Include="Advanced\Fluent\Enums\Types.cs" />
+    <Compile Include="Advanced\Fluent\Enums\Colors.cs" />
+    <Compile Include="Advanced\Fluent\Enums\Sizes.cs" />
     <Compile Include="Beginners\Pages\BingMainPage\BingMainPage.cs" />
     <Compile Include="Beginners\Pages\BingMainPage\BingMainPageValidator.cs" />
     <Compile Include="Beginners\Pages\BingMainPage\BingMainPageElementMap.cs" />
