--- a/PatternsInAutomation.Tests/PatternsInAutomation.Tests/PatternsInAutomation.Tests.csproj
+++ b/PatternsInAutomation.Tests/PatternsInAutomation.Tests/PatternsInAutomation.Tests.csproj
@@ -35,7 +35,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Practices.Unity, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.Configuration">
+      <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention">
+      <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Drawing" />
     <Reference Include="WebDriver, Version=2.45.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -63,6 +74,7 @@
     <Compile Include="Advanced\Core\Fluent\BaseFluentPageSingleton.cs" />
     <Compile Include="Advanced\Core\Fluent\BasePageElementMap.cs" />
     <Compile Include="Advanced\Core\Fluent\BasePageValidator.cs" />
+    <Compile Include="Advanced\UnityWikipediaTests.cs" />
     <Compile Include="Advanced\FluentBingTests.cs" />
     <Compile Include="Advanced\Base\ThreadSafeNestedContructorsBaseSingleton.cs" />
     <Compile Include="Advanced\Base\ThreadSafeLazyBaseSingleton.cs" />
@@ -110,6 +122,28 @@
     <Compile Include="Advanced\Fluent\Enums\Types.cs" />
     <Compile Include="Advanced\Fluent\Enums\Colors.cs" />
     <Compile Include="Advanced\Fluent\Enums\Sizes.cs" />
+    <Compile Include="Advanced\Unity\Base\BasePage.cs" />
+    <Compile Include="Advanced\Unity\Base\BasePageElementMap.cs" />
+    <Compile Include="Advanced\Unity\Base\BasePageValidator.cs" />
+    <Compile Include="Advanced\Unity\Base\IPage.cs" />
+    <Compile Include="Advanced\Unity\Base\PageFactory.cs" />
+    <Compile Include="Advanced\Unity\BingMainPage\BingMainPage.cs" />
+    <Compile Include="Advanced\Unity\BingMainPage\BingMainPageElementMap.cs" />
+    <Compile Include="Advanced\Unity\BingMainPage\BingMainPageValidator.cs" />
+    <Compile Include="Advanced\Unity\BingMainPage\HardCore\IBingMainPage.cs" />
+    <Compile Include="Advanced\Unity\BingMainPage\IBingMainPage.cs" />
+    <Compile Include="Advanced\Unity\Enums\Colors.cs" />
+    <Compile Include="Advanced\Unity\Enums\Dates.cs" />
+    <Compile Include="Advanced\Unity\Enums\Layouts.cs" />
+    <Compile Include="Advanced\Unity\Enums\Licenses.cs" />
+    <Compile Include="Advanced\Unity\Enums\People.cs" />
+    <Compile Include="Advanced\Unity\Enums\Sizes.cs" />
+    <Compile Include="Advanced\Unity\Enums\Types.cs" />
+    <Compile Include="Advanced\Unity\WikipediaMainPage\WikipediaMainPage.cs" />
+    <Compile Include="Advanced\Unity\WikipediaMainPage\WikipediaMainPageMap.cs" />
+    <Compile Include="Advanced\Unity\WikipediaMainPage\WikipediaMainPageValidator.cs" />
+    <Compile Include="Advanced\Unity\WikipediaMainPage\HardCore\IWikipediaMainPage.cs" />
+    <Compile Include="Advanced\Unity\WikipediaMainPage\IWikipediaMainPage.cs" />
     <Compile Include="Beginners\Pages\BingMainPage\BingMainPage.cs" />
     <Compile Include="Beginners\Pages\BingMainPage\BingMainPageValidator.cs" />
     <Compile Include="Beginners\Pages\BingMainPage\BingMainPageElementMap.cs" />
@@ -120,6 +154,9 @@
   <ItemGroup>
     <None Include="ClassDiagram1.cd" />
     <None Include="packages.config" />
+    <None Include="unity.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup />
   <Choose>
