--- a/PatternsInAutomation.Tests/PatternsInAutomation.Tests/packages.config
+++ b/PatternsInAutomation.Tests/PatternsInAutomation.Tests/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Selenium.Support" version="2.45.0" targetFramework="net45" />
   <package id="Selenium.WebDriver" version="2.45.0" targetFramework="net45" />
+  <package id="Unity" version="3.5.1404.0" targetFramework="net45" />
 </packages>
