--- a/PatternsInAutomation.Tests/PatternsInAutomation.Tests/PatternsInAutomation.Tests.csproj
+++ b/PatternsInAutomation.Tests/PatternsInAutomation.Tests/PatternsInAutomation.Tests.csproj
@@ -71,9 +71,42 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Advanced\AdvancedBingSingletonTests.cs" />
+    <Compile Include="Advanced\Core\BasePageSingleton.cs" />
     <Compile Include="Advanced\Core\Fluent\BaseFluentPageSingleton.cs" />
     <Compile Include="Advanced\Core\Fluent\BasePageElementMap.cs" />
     <Compile Include="Advanced\Core\Fluent\BasePageValidator.cs" />
+    <Compile Include="Advanced\Strategy\Base\PurchaseFacade.cs" />
+    <Compile Include="Advanced\Strategy\Data\ClientLoginInfo.cs" />
+    <Compile Include="Advanced\Strategy\Data\ClientPurchaseInfo.cs" />
+    <Compile Include="Advanced\Strategy\Enums\Countries.cs" />
+    <Compile Include="Advanced\Strategy\Enums\GiftWrappingStyles.cs" />
+    <Compile Include="Advanced\Strategy\Enums\States.cs" />
+    <Compile Include="Advanced\Strategy\Services\GiftWrappingPriceCalculationService.cs" />
+    <Compile Include="Advanced\Strategy\Services\OrderSummaryCalculator.cs" />
+    <Compile Include="Advanced\Strategy\Services\SalesTaxCalculationService.cs" />
+    <Compile Include="Advanced\Strategy\Services\ShippingCostsCalculationService.cs" />
+    <Compile Include="Advanced\Strategy\Strategies\GiftOrderValidationStrategy.cs" />
+    <Compile Include="Advanced\Strategy\Base\IOrderValidationStrategy.cs" />
+    <Compile Include="Advanced\Strategy\Strategies\NoTaxesOrderValidationStrategy.cs" />
+    <Compile Include="Advanced\Strategy\Pages\PlaceOrderPage\PlaceOrderPage.cs" />
+    <Compile Include="Advanced\Strategy\Pages\PlaceOrderPage\PlaceOrderPageMap.cs" />
+    <Compile Include="Advanced\Strategy\Pages\PlaceOrderPage\PlaceOrderPageValidator.cs" />
+    <Compile Include="Advanced\Strategy\Pages\ItemPage\ItemPage.cs" />
+    <Compile Include="Advanced\Strategy\Pages\ItemPage\ItemPageMap.cs" />
+    <Compile Include="Advanced\Strategy\Pages\ItemPage\ItemPageValidator.cs" />
+    <Compile Include="Advanced\Strategy\Pages\PreviewShoppingCartPage\PreviewShoppingCartPage.cs" />
+    <Compile Include="Advanced\Strategy\Pages\PreviewShoppingCartPage\PreviewShoppingCartPageMap.cs" />
+    <Compile Include="Advanced\Strategy\Pages\ShippingPaymentPage\ShippingPaymentPage.cs" />
+    <Compile Include="Advanced\Strategy\Pages\ShippingPaymentPage\ShippingPaymentPageMap.cs" />
+    <Compile Include="Advanced\Strategy\Pages\ShippingAddressPage\ShippingAddressPage.cs" />
+    <Compile Include="Advanced\Strategy\Pages\ShippingAddressPage\ShippingAddressPageMap.cs" />
+    <Compile Include="Advanced\Strategy\Pages\SignInPage\SignInPage.cs" />
+    <Compile Include="Advanced\Strategy\Pages\SignInPage\SignInPageMap.cs" />
+    <Compile Include="Advanced\Strategy\Base\PurchaseContext.cs" />
+    <Compile Include="Advanced\Strategy\Strategies\SalesTaxOrderValidationStrategy.cs" />
+    <Compile Include="Advanced\Strategy\Strategies\VatTaxOrderValidationStrategy.cs" />
+    <Compile Include="Advanced\Strategy\Services\VatTaxCalculationService.cs" />
+    <Compile Include="Advanced\Strategy\Tests\AmazonPurchase_PurchaseStrategy_Tests.cs" />
     <Compile Include="Advanced\UnityWikipediaTests.cs" />
     <Compile Include="Advanced\FluentBingTests.cs" />
     <Compile Include="Advanced\Base\ThreadSafeNestedContructorsBaseSingleton.cs" />
