add advanced strategy pattern

--- a/PatternsInAutomation.Tests/PatternsInAutomation.Tests/PatternsInAutomation.Tests.csproj
+++ b/PatternsInAutomation.Tests/PatternsInAutomation.Tests/PatternsInAutomation.Tests.csproj
@@ -75,7 +75,15 @@
     <Compile Include="Advanced\Core\Fluent\BaseFluentPageSingleton.cs" />
     <Compile Include="Advanced\Core\Fluent\BasePageElementMap.cs" />
     <Compile Include="Advanced\Core\Fluent\BasePageValidator.cs" />
-    <Compile Include="Advanced\Strategy\Base\PurchaseFacade.cs" />
+    <Compile Include="Advanced\Strategy\Advanced\Base\IOrderPurchaseStrategy.cs" />
+    <Compile Include="Advanced\Strategy\Advanced\Base\PurchaseContext.cs" />
+    <Compile Include="Advanced\Strategy\Advanced\Base\PurchaseFacade.cs" />
+    <Compile Include="Advanced\Strategy\Advanced\Strategies\GiftOrderPurchaseStrategy.cs" />
+    <Compile Include="Advanced\Strategy\Advanced\Strategies\NoTaxesOrderPurchaseStrategy.cs" />
+    <Compile Include="Advanced\Strategy\Advanced\Strategies\SalesTaxOrderPurchaseStrategy.cs" />
+    <Compile Include="Advanced\Strategy\Advanced\Strategies\VatTaxOrderPurchaseStrategy.cs" />
+    <Compile Include="Advanced\Strategy\Basic\Base\PurchaseFacade.cs" />
+    <Compile Include="Advanced\Strategy\Data\ClientAddressInfo.cs" />
     <Compile Include="Advanced\Strategy\Data\ClientLoginInfo.cs" />
     <Compile Include="Advanced\Strategy\Data\ClientPurchaseInfo.cs" />
     <Compile Include="Advanced\Strategy\Enums\Countries.cs" />
@@ -85,9 +93,9 @@
     <Compile Include="Advanced\Strategy\Services\OrderSummaryCalculator.cs" />
     <Compile Include="Advanced\Strategy\Services\SalesTaxCalculationService.cs" />
     <Compile Include="Advanced\Strategy\Services\ShippingCostsCalculationService.cs" />
-    <Compile Include="Advanced\Strategy\Strategies\GiftOrderValidationStrategy.cs" />
-    <Compile Include="Advanced\Strategy\Base\IOrderValidationStrategy.cs" />
-    <Compile Include="Advanced\Strategy\Strategies\NoTaxesOrderValidationStrategy.cs" />
+    <Compile Include="Advanced\Strategy\Basic\Strategies\GiftOrderValidationStrategy.cs" />
+    <Compile Include="Advanced\Strategy\Basic\Base\IOrderValidationStrategy.cs" />
+    <Compile Include="Advanced\Strategy\Basic\Strategies\NoTaxesOrderValidationStrategy.cs" />
     <Compile Include="Advanced\Strategy\Pages\PlaceOrderPage\PlaceOrderPage.cs" />
     <Compile Include="Advanced\Strategy\Pages\PlaceOrderPage\PlaceOrderPageMap.cs" />
     <Compile Include="Advanced\Strategy\Pages\PlaceOrderPage\PlaceOrderPageValidator.cs" />
@@ -102,10 +110,11 @@
     <Compile Include="Advanced\Strategy\Pages\ShippingAddressPage\ShippingAddressPageMap.cs" />
     <Compile Include="Advanced\Strategy\Pages\SignInPage\SignInPage.cs" />
     <Compile Include="Advanced\Strategy\Pages\SignInPage\SignInPageMap.cs" />
-    <Compile Include="Advanced\Strategy\Base\PurchaseContext.cs" />
-    <Compile Include="Advanced\Strategy\Strategies\SalesTaxOrderValidationStrategy.cs" />
-    <Compile Include="Advanced\Strategy\Strategies\VatTaxOrderValidationStrategy.cs" />
+    <Compile Include="Advanced\Strategy\Basic\Base\PurchaseContext.cs" />
+    <Compile Include="Advanced\Strategy\Basic\Strategies\SalesTaxOrderValidationStrategy.cs" />
+    <Compile Include="Advanced\Strategy\Basic\Strategies\VatTaxOrderValidationStrategy.cs" />
     <Compile Include="Advanced\Strategy\Services\VatTaxCalculationService.cs" />
+    <Compile Include="Advanced\Strategy\Tests\AmazonPurchase_AdvancedPurchaseStrategy_Tests.cs" />
     <Compile Include="Advanced\Strategy\Tests\AmazonPurchase_PurchaseStrategy_Tests.cs" />
     <Compile Include="Advanced\UnityWikipediaTests.cs" />
     <Compile Include="Advanced\FluentBingTests.cs" />
