advanced observer pattern
add observer pattern via events and delegates and via IObserver

--- a/PatternsInAutomation.Tests/PatternsInAutomation.Tests/PatternsInAutomation.Tests.csproj
+++ b/PatternsInAutomation.Tests/PatternsInAutomation.Tests/PatternsInAutomation.Tests.csproj
@@ -75,8 +75,27 @@
     <Compile Include="Advanced\Core\Fluent\BaseFluentPageSingleton.cs" />
     <Compile Include="Advanced\Core\Fluent\BasePageElementMap.cs" />
     <Compile Include="Advanced\Core\Fluent\BasePageValidator.cs" />
-    <Compile Include="Advanced\Observer\Classic\Attributes\ExecutionBrowserAttribute.cs" />
-    <Compile Include="Advanced\Observer\Classic\Attributes\KnownIssueAttribute.cs" />
+    <Compile Include="Advanced\Observer\Advanced\DotNetEvents\BaseTest.cs" />
+    <Compile Include="Advanced\Observer\Advanced\DotNetEvents\BaseTestBehaviorObserver.cs" />
+    <Compile Include="Advanced\Observer\Advanced\DotNetEvents\Behaviors\AssociatedBugTestBehaviorObserver.cs" />
+    <Compile Include="Advanced\Observer\Advanced\DotNetEvents\Behaviors\BrowserLaunchTestBehaviorObserver.cs" />
+    <Compile Include="Advanced\Observer\Advanced\DotNetEvents\Behaviors\OwnerTestBehaviorObserver.cs" />
+    <Compile Include="Advanced\Observer\Advanced\DotNetEvents\BingTestsDotNetEvents.cs" />
+    <Compile Include="Advanced\Observer\Advanced\DotNetEvents\IExecutionProvider.cs" />
+    <Compile Include="Advanced\Observer\Advanced\DotNetEvents\MSTestExecutionProvider.cs" />
+    <Compile Include="Advanced\Observer\Advanced\DotNetEvents\TestExecutionEventArgs.cs" />
+    <Compile Include="Advanced\Observer\Advanced\ObservableObserver\BaseTest.cs" />
+    <Compile Include="Advanced\Observer\Advanced\ObservableObserver\BaseTestBehaviorObserver.cs" />
+    <Compile Include="Advanced\Observer\Advanced\ObservableObserver\Behaviors\AssociatedBugTestBehaviorObserver.cs" />
+    <Compile Include="Advanced\Observer\Advanced\ObservableObserver\Behaviors\BrowserLaunchTestBehaviorObserver.cs" />
+    <Compile Include="Advanced\Observer\Advanced\ObservableObserver\Behaviors\OwnerTestBehaviorObserver.cs" />
+    <Compile Include="Advanced\Observer\Advanced\ObservableObserver\Enums\ExecutionPhases.cs" />
+    <Compile Include="Advanced\Observer\Advanced\ObservableObserver\ExecutionStatus.cs" />
+    <Compile Include="Advanced\Observer\Advanced\ObservableObserver\ITestExecutionProvider.cs" />
+    <Compile Include="Advanced\Observer\Advanced\ObservableObserver\MSTestExecutionProvider.cs" />
+    <Compile Include="Advanced\Observer\Advanced\ObservableObserver\Unsubscriber.cs" />
+    <Compile Include="Advanced\Observer\Attributes\ExecutionBrowserAttribute.cs" />
+    <Compile Include="Advanced\Observer\Attributes\KnownIssueAttribute.cs" />
     <Compile Include="Advanced\Observer\Classic\BaseTestBehaviorObserver.cs" />
     <Compile Include="Advanced\Observer\Classic\Behaviors\OwnerTestBehaviorObserver.cs" />
     <Compile Include="Advanced\Observer\Classic\Behaviors\AssociatedBugTestBehaviorObserver.cs" />
