refactor observer IObserver implementation + AutoMapper benchmark improve + add improved dateTimeAssert

--- a/AAngelov.Utilities/AAngelov.Utilities.Test/AAngelov.Utilities.Test.csproj
+++ b/AAngelov.Utilities/AAngelov.Utilities.Test/AAngelov.Utilities.Test.csproj
@@ -43,6 +43,7 @@
     <Compile Include="ReducedAutoMapper.cs" />
     <Compile Include="ReducedAutoMapperExtended.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validators\Improved\DateTimeAssert.cs" />
     <Compile Include="Validators\DateTimeAssert.cs" />
     <Compile Include="Validators\PropertiesValidator.cs" />
     <Compile Include="Validators\Enums\DateTimeDeltaType.cs" />
