add decorator examples
add decorator examples

--- a/PatternsInAutomation.Tests/PatternsInAutomation.Tests/PatternsInAutomation.Tests.csproj
+++ b/PatternsInAutomation.Tests/PatternsInAutomation.Tests/PatternsInAutomation.Tests.csproj
@@ -75,6 +75,47 @@
     <Compile Include="Advanced\Core\Fluent\BaseFluentPageSingleton.cs" />
     <Compile Include="Advanced\Core\Fluent\BasePageElementMap.cs" />
     <Compile Include="Advanced\Core\Fluent\BasePageValidator.cs" />
+    <Compile Include="Advanced\Decorator\Advanced\Base\IOrderPurchaseStrategy.cs" />
+    <Compile Include="Advanced\Decorator\Advanced\Base\PurchaseContext.cs" />
+    <Compile Include="Advanced\Decorator\Advanced\Base\PurchaseFacade.cs" />
+    <Compile Include="Advanced\Decorator\Advanced\Strategies\GiftOrderPurchaseStrategy.cs" />
+    <Compile Include="Advanced\Decorator\Advanced\Strategies\NoTaxesOrderPurchaseStrategy.cs" />
+    <Compile Include="Advanced\Decorator\Advanced\Strategies\SalesTaxOrderPurchaseStrategy.cs" />
+    <Compile Include="Advanced\Decorator\Advanced\Strategies\VatTaxOrderPurchaseStrategy.cs" />
+    <Compile Include="Advanced\Decorator\Basic\Base\IOrderValidationStrategy.cs" />
+    <Compile Include="Advanced\Decorator\Basic\Base\PurchaseContext.cs" />
+    <Compile Include="Advanced\Decorator\Basic\Base\PurchaseFacade.cs" />
+    <Compile Include="Advanced\Decorator\Basic\Strategies\GiftOrderValidationStrategy.cs" />
+    <Compile Include="Advanced\Decorator\Basic\Strategies\NoTaxesOrderValidationStrategy.cs" />
+    <Compile Include="Advanced\Decorator\Basic\Strategies\SalesTaxOrderValidationStrategy.cs" />
+    <Compile Include="Advanced\Decorator\Basic\Strategies\VatTaxOrderValidationStrategy.cs" />
+    <Compile Include="Advanced\Decorator\Data\ClientAddressInfo.cs" />
+    <Compile Include="Advanced\Decorator\Data\ClientLoginInfo.cs" />
+    <Compile Include="Advanced\Decorator\Data\ClientPurchaseInfo.cs" />
+    <Compile Include="Advanced\Decorator\Enums\Countries.cs" />
+    <Compile Include="Advanced\Decorator\Enums\GiftWrappingStyles.cs" />
+    <Compile Include="Advanced\Decorator\Enums\States.cs" />
+    <Compile Include="Advanced\Decorator\Pages\ItemPage\ItemPage.cs" />
+    <Compile Include="Advanced\Decorator\Pages\ItemPage\ItemPageMap.cs" />
+    <Compile Include="Advanced\Decorator\Pages\ItemPage\ItemPageValidator.cs" />
+    <Compile Include="Advanced\Decorator\Pages\PlaceOrderPage\PlaceOrderPage.cs" />
+    <Compile Include="Advanced\Decorator\Pages\PlaceOrderPage\PlaceOrderPageMap.cs" />
+    <Compile Include="Advanced\Decorator\Pages\PlaceOrderPage\PlaceOrderPageValidator.cs" />
+    <Compile Include="Advanced\Decorator\Pages\PreviewShoppingCartPage\PreviewShoppingCartPage.cs" />
+    <Compile Include="Advanced\Decorator\Pages\PreviewShoppingCartPage\PreviewShoppingCartPageMap.cs" />
+    <Compile Include="Advanced\Decorator\Pages\ShippingAddressPage\ShippingAddressPage.cs" />
+    <Compile Include="Advanced\Decorator\Pages\ShippingAddressPage\ShippingAddressPageMap.cs" />
+    <Compile Include="Advanced\Decorator\Pages\ShippingPaymentPage\ShippingPaymentPage.cs" />
+    <Compile Include="Advanced\Decorator\Pages\ShippingPaymentPage\ShippingPaymentPageMap.cs" />
+    <Compile Include="Advanced\Decorator\Pages\SignInPage\SignInPage.cs" />
+    <Compile Include="Advanced\Decorator\Pages\SignInPage\SignInPageMap.cs" />
+    <Compile Include="Advanced\Decorator\Services\GiftWrappingPriceCalculationService.cs" />
+    <Compile Include="Advanced\Decorator\Services\OrderSummaryCalculator.cs" />
+    <Compile Include="Advanced\Decorator\Services\SalesTaxCalculationService.cs" />
+    <Compile Include="Advanced\Decorator\Services\ShippingCostsCalculationService.cs" />
+    <Compile Include="Advanced\Decorator\Services\VatTaxCalculationService.cs" />
+    <Compile Include="Advanced\Decorator\Tests\AmazonPurchase_AdvancedPurchaseStrategy_Tests.cs" />
+    <Compile Include="Advanced\Decorator\Tests\AmazonPurchase_PurchaseStrategy_Tests.cs" />
     <Compile Include="Advanced\Observer\Advanced\DotNetEvents\BaseTest.cs" />
     <Compile Include="Advanced\Observer\Advanced\DotNetEvents\BaseTestBehaviorObserver.cs" />
     <Compile Include="Advanced\Observer\Advanced\DotNetEvents\Behaviors\AssociatedBugTestBehaviorObserver.cs" />
