add decorator pattern examples
add decorator pattern examples

--- a/PatternsInAutomation.Tests/PatternsInAutomation.Tests/PatternsInAutomation.Tests.csproj
+++ b/PatternsInAutomation.Tests/PatternsInAutomation.Tests/PatternsInAutomation.Tests.csproj
@@ -75,20 +75,14 @@
     <Compile Include="Advanced\Core\Fluent\BaseFluentPageSingleton.cs" />
     <Compile Include="Advanced\Core\Fluent\BasePageElementMap.cs" />
     <Compile Include="Advanced\Core\Fluent\BasePageValidator.cs" />
-    <Compile Include="Advanced\Decorator\Advanced\Base\IOrderPurchaseStrategy.cs" />
     <Compile Include="Advanced\Decorator\Advanced\Base\PurchaseContext.cs" />
-    <Compile Include="Advanced\Decorator\Advanced\Base\PurchaseFacade.cs" />
     <Compile Include="Advanced\Decorator\Advanced\Strategies\GiftOrderPurchaseStrategy.cs" />
+    <Compile Include="Advanced\Decorator\Advanced\Strategies\OrderPurchaseStrategyDecorator.cs" />
+    <Compile Include="Advanced\Decorator\Advanced\Strategies\TotalPriceOrderPurchaseStrategy.cs" />
+    <Compile Include="Advanced\Decorator\Advanced\Strategies\OrderPurchaseStrategy.cs" />
     <Compile Include="Advanced\Decorator\Advanced\Strategies\NoTaxesOrderPurchaseStrategy.cs" />
     <Compile Include="Advanced\Decorator\Advanced\Strategies\SalesTaxOrderPurchaseStrategy.cs" />
     <Compile Include="Advanced\Decorator\Advanced\Strategies\VatTaxOrderPurchaseStrategy.cs" />
-    <Compile Include="Advanced\Decorator\Basic\Base\IOrderValidationStrategy.cs" />
-    <Compile Include="Advanced\Decorator\Basic\Base\PurchaseContext.cs" />
-    <Compile Include="Advanced\Decorator\Basic\Base\PurchaseFacade.cs" />
-    <Compile Include="Advanced\Decorator\Basic\Strategies\GiftOrderValidationStrategy.cs" />
-    <Compile Include="Advanced\Decorator\Basic\Strategies\NoTaxesOrderValidationStrategy.cs" />
-    <Compile Include="Advanced\Decorator\Basic\Strategies\SalesTaxOrderValidationStrategy.cs" />
-    <Compile Include="Advanced\Decorator\Basic\Strategies\VatTaxOrderValidationStrategy.cs" />
     <Compile Include="Advanced\Decorator\Data\ClientAddressInfo.cs" />
     <Compile Include="Advanced\Decorator\Data\ClientLoginInfo.cs" />
     <Compile Include="Advanced\Decorator\Data\ClientPurchaseInfo.cs" />
@@ -114,8 +108,7 @@
     <Compile Include="Advanced\Decorator\Services\SalesTaxCalculationService.cs" />
     <Compile Include="Advanced\Decorator\Services\ShippingCostsCalculationService.cs" />
     <Compile Include="Advanced\Decorator\Services\VatTaxCalculationService.cs" />
-    <Compile Include="Advanced\Decorator\Tests\AmazonPurchase_AdvancedPurchaseStrategy_Tests.cs" />
-    <Compile Include="Advanced\Decorator\Tests\AmazonPurchase_PurchaseStrategy_Tests.cs" />
+    <Compile Include="Advanced\Decorator\Tests\AmazonPurchase_DecoratedStrategies_Tests.cs" />
     <Compile Include="Advanced\Observer\Advanced\DotNetEvents\BaseTest.cs" />
     <Compile Include="Advanced\Observer\Advanced\DotNetEvents\BaseTestBehaviorObserver.cs" />
     <Compile Include="Advanced\Observer\Advanced\DotNetEvents\Behaviors\AssociatedBugTestBehaviorObserver.cs" />
