--- a/PatternsInAutomation.Tests/WebDriver.Series.Tests/WebDriver.Series.Tests.csproj
+++ b/PatternsInAutomation.Tests/WebDriver.Series.Tests/WebDriver.Series.Tests.csproj
@@ -62,6 +62,7 @@
     <Compile Include="RamDiskTests.cs" />
     <Compile Include="HealthyDietMenuGeneratorTestsFirefox.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
