--- a/PatternsInAutomation.Tests/PatternsInAutomation.Tests/PatternsInAutomation.Tests.csproj
+++ b/PatternsInAutomation.Tests/PatternsInAutomation.Tests/PatternsInAutomation.Tests.csproj
@@ -48,13 +48,13 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Drawing" />
-    <Reference Include="WebDriver, Version=2.46.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Selenium.WebDriver.2.46.0\lib\net40\WebDriver.dll</HintPath>
+    <Reference Include="WebDriver, Version=2.47.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Selenium.WebDriver.2.47.0\lib\net40\WebDriver.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="WebDriver.Support, Version=2.46.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Selenium.Support.2.46.0\lib\net40\WebDriver.Support.dll</HintPath>
+    <Reference Include="WebDriver.Support, Version=2.47.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Selenium.Support.2.47.0\lib\net40\WebDriver.Support.dll</HintPath>
+      <Private>True</Private>
     </Reference>
   </ItemGroup>
   <Choose>
@@ -255,6 +255,16 @@
     <Compile Include="Beginners\Pages\BingMainPage\BingMainPageElementMap.cs" />
     <Compile Include="Beginners\Selenium\Bing\Pages\BingMainPage.cs" />
     <Compile Include="Beginners\BingTests.cs" />
+    <Compile Include="Conference\BasePage.cs" />
+    <Compile Include="Conference\BasePageElementMap.cs" />
+    <Compile Include="Conference\BasePageAsserter.cs" />
+    <Compile Include="Conference\BingMainPage\BingMainPage.cs" />
+    <Compile Include="Conference\BingMainPage\BingMainPageElementMap.cs" />
+    <Compile Include="Conference\BingMainPage\BingMainPageAsserter.cs" />
+    <Compile Include="Conference\BingTests.cs" />
+    <Compile Include="Conference\IPage.cs" />
+    <Compile Include="Conference\PageFactory.cs" />
+    <Compile Include="Conference\PurchaseFacade.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
