improve conference examples

--- a/PatternsInAutomation.Tests/PatternsInAutomation.Tests/PatternsInAutomation.Tests.csproj
+++ b/PatternsInAutomation.Tests/PatternsInAutomation.Tests/PatternsInAutomation.Tests.csproj
@@ -255,22 +255,34 @@
     <Compile Include="Beginners\Pages\BingMainPage\BingMainPageElementMap.cs" />
     <Compile Include="Beginners\Selenium\Bing\Pages\BingMainPage.cs" />
     <Compile Include="Beginners\BingTests.cs" />
-    <Compile Include="Conference\BasePage.cs" />
-    <Compile Include="Conference\BasePageElementMap.cs" />
-    <Compile Include="Conference\BasePageAsserter.cs" />
-    <Compile Include="Advanced\Ebay\Pages\ICheckoutPage.cs" />
-    <Compile Include="Advanced\Ebay\Pages\IItemPage.cs" />
-    <Compile Include="Advanced\Ebay\Pages\IShippingAddressPage.cs" />
-    <Compile Include="Advanced\Ebay\Pages\ISignInPage.cs" />
+    <Compile Include="Conference\Base\BasePage.cs" />
+    <Compile Include="Conference\Base\BaseElementMap.cs" />
+    <Compile Include="Conference\ShoppingCartTests.cs" />
+    <Compile Include="Conference\Data\ClientInfo.cs" />
     <Compile Include="Conference\Pages\BingMain\BingMainPage.cs" />
-    <Compile Include="Conference\Pages\BingMain\BingMainPageElementMap.cs" />
+    <Compile Include="Conference\Pages\BingMain\BingMainPageMap.cs" />
     <Compile Include="Conference\Pages\BingMain\BingMainPageAsserter.cs" />
     <Compile Include="Conference\BingTests.cs" />
-    <Compile Include="Conference\IPage.cs" />
-    <Compile Include="Conference\PageFactory.cs" />
+    <Compile Include="Conference\Base\IPage.cs" />
+    <Compile Include="Conference\Base\ShoppingCartFactory.cs" />
     <Compile Include="Conference\Pages\BingMain\IBingMainPage.cs" />
-    <Compile Include="Conference\ShoppingCart.cs" />
-    <Compile Include="IPageFactory.cs" />
+    <Compile Include="Conference\Pages\Checkout\CheckoutPage.cs" />
+    <Compile Include="Conference\Pages\Checkout\CheckoutPageMap.cs" />
+    <Compile Include="Conference\Pages\Checkout\CheckoutPageAsserter.cs" />
+    <Compile Include="Conference\Pages\Checkout\ICheckoutPage.cs" />
+    <Compile Include="Conference\Pages\Item\IItemPage.cs" />
+    <Compile Include="Conference\Pages\ShippingAddress\IShippingAddressPage.cs" />
+    <Compile Include="Conference\Pages\SignIn\ISignInPage.cs" />
+    <Compile Include="Conference\Pages\Item\ItemPage.cs" />
+    <Compile Include="Conference\Pages\Item\ItemPageMap.cs" />
+    <Compile Include="Conference\Pages\Item\ItemPageAsserter.cs" />
+    <Compile Include="Conference\Pages\ShippingAddress\ShippingAddressPage.cs" />
+    <Compile Include="Conference\Pages\ShippingAddress\ShippingAddressPageMap.cs" />
+    <Compile Include="Conference\Pages\ShippingAddress\ShippingAddressPageAsserter.cs" />
+    <Compile Include="Conference\Pages\SignIn\SignInPage.cs" />
+    <Compile Include="Conference\Pages\SignIn\SignInPageMap.cs" />
+    <Compile Include="Conference\Base\ShoppingCart.cs" />
+    <Compile Include="Conference\Base\IFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
