--- a/PatternsInAutomation.Tests/PatternsInAutomation.Tests/PatternsInAutomation.Tests.csproj
+++ b/PatternsInAutomation.Tests/PatternsInAutomation.Tests/PatternsInAutomation.Tests.csproj
@@ -286,6 +286,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="PageObjectDesignPattern-Class-Diagram.cd" />
     <None Include="packages.config" />
     <None Include="unity.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
