--- a/PatternsInAutomation.Tests/CSharp.Series.Tests/CSharp.Series.Tests.csproj
+++ b/PatternsInAutomation.Tests/CSharp.Series.Tests/CSharp.Series.Tests.csproj
@@ -32,6 +32,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CodeAnalysis, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -112,21 +113,21 @@
     <Compile Include="DefaultValueAttributeTest.cs" />
     <Compile Include="DefaultValueOperatorTest.cs" />
     <Compile Include="DictionaryExtensions.cs" />
+    <Compile Include="GetValueOrDefaultVsNullCoalescingOperator\GetValueOrDefaultAndNullCoalescingOperatorInternals.cs" />
+    <Compile Include="GetValueOrDefaultVsNullCoalescingOperator\GetValueOrDefaultVsNullCoalescingOperatorTest.cs" />
     <Compile Include="Minions.cs" />
     <Compile Include="ObsoleteExample.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThreadSafeLazyBaseSingleton.cs" />
+    <Compile Include="Utils\FileWriter.cs" />
+    <Compile Include="Utils\Profiler.cs" />
     <Compile Include="VolatileExample.cs" />
     <Compile Include="WeakReferenceTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.1.0.0\analyzers\dotnet\cs\Microsoft.CodeAnalysis.Analyzers.dll" />
-    <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.1.0.0\analyzers\dotnet\cs\Microsoft.CodeAnalysis.CSharp.Analyzers.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
