add new examples for Page Objects Who Make Code More Maintainable article

--- a/PatternsInAutomation.Tests/PatternsInAutomation.Tests/PatternsInAutomation.Tests.csproj
+++ b/PatternsInAutomation.Tests/PatternsInAutomation.Tests/PatternsInAutomation.Tests.csproj
@@ -139,6 +139,27 @@
     <Compile Include="Advanced\Observer\Classic\MSTestExecutionSubject.cs" />
     <Compile Include="Advanced\Observer\Classic\BaseTest.cs" />
     <Compile Include="Advanced\Observer\Classic\ITestBehaviorObserver.cs" />
+    <Compile Include="Advanced\PageObjectv2.2\Base\BaseElementMap.cs" />
+    <Compile Include="Advanced\PageObjectv2.2\Base\BasePage.cs" />
+    <Compile Include="Advanced\PageObjectv2.2\BingTests.cs" />
+    <Compile Include="Advanced\PageObjectv2.2\Pages\BingMain\BingMainPage.Map.cs" />
+    <Compile Include="Advanced\PageObjectv2.2\Pages\BingMain\BingMainPage.cs" />
+    <Compile Include="Advanced\PageObjectv2.2\Pages\BingMain\BingMainPageAsserter.cs" />
+    <Compile Include="Advanced\PageObjectv2.2\Pages\BingMain\BingMainPageMap.cs" />
+    <Compile Include="Advanced\PageObjectv2.1\Base\BaseElementMap.cs" />
+    <Compile Include="Advanced\PageObjectv2.1\Base\BasePage.cs" />
+    <Compile Include="Advanced\PageObjectv2.1\BingTests.cs" />
+    <Compile Include="Advanced\PageObjectv2.1\Pages\BingMain\BingMainPage.cs" />
+    <Compile Include="Advanced\PageObjectv2.1\Pages\BingMain\BingMainPageAsserter.cs" />
+    <Compile Include="Advanced\PageObjectv2.1\Pages\BingMain\BingMainPageMap.cs" />
+    <Compile Include="Advanced\PageObjectv2.0\Base\BaseElementMap.cs" />
+    <Compile Include="Advanced\PageObjectv2.0\Base\BasePage.cs" />
+    <Compile Include="Advanced\PageObjectv2.0\Base\IPage.cs" />
+    <Compile Include="Advanced\PageObjectv2.0\BingTests.cs" />
+    <Compile Include="Advanced\PageObjectv2.0\Pages\BingMain\BingMainPage.cs" />
+    <Compile Include="Advanced\PageObjectv2.0\Pages\BingMain\BingMainPageAsserter.cs" />
+    <Compile Include="Advanced\PageObjectv2.0\Pages\BingMain\BingMainPageMap.cs" />
+    <Compile Include="Advanced\PageObjectv2.0\Pages\BingMain\IBingMainPage.cs" />
     <Compile Include="Advanced\Strategy\Advanced\Base\IOrderPurchaseStrategy.cs" />
     <Compile Include="Advanced\Strategy\Advanced\Base\PurchaseContext.cs" />
     <Compile Include="Advanced\Strategy\Advanced\Base\PurchaseFacade.cs" />
