--- a/AutomateThePlanetPoster/AutomateThePlanetPoster/AutomateThePlanetPoster.csproj
+++ b/AutomateThePlanetPoster/AutomateThePlanetPoster/AutomateThePlanetPoster.csproj
@@ -37,11 +37,15 @@
     <ApplicationIcon>generate_tables.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="HtmlAgilityPack">
+      <HintPath>..\packages\HtmlAgilityPack.1.4.9\lib\Net45\HtmlAgilityPack.dll</HintPath>
+    </Reference>
     <Reference Include="log4net">
       <HintPath>..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -59,6 +63,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Core\CodeProjectArticlesBeautifierService.cs" />
     <Compile Include="Core\PostTypes.cs" />
     <Compile Include="Core\EnumHelper.cs" />
     <Compile Include="Core\PostsService.cs" />
