add kendo grid tests

--- a/PatternsInAutomation.Tests/WebDriver.Series.Tests/WebDriver.Series.Tests.csproj
+++ b/PatternsInAutomation.Tests/WebDriver.Series.Tests/WebDriver.Series.Tests.csproj
@@ -35,6 +35,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
     <Reference Include="WebDriver">
@@ -57,8 +61,14 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Controls\GridFilter.cs" />
+    <Compile Include="Controls\GridItem.cs" />
+    <Compile Include="Controls\KendoGrid.cs" />
+    <Compile Include="Controls\SortType.cs" />
     <Compile Include="EdgeTests\Pages\HealthyDietGeneratorPage.cs" />
+    <Compile Include="Enums\FilterOperator.cs" />
     <Compile Include="HealthyDietMenuGeneratorTestsEdge.cs" />
+    <Compile Include="KendoGridTests.cs" />
     <Compile Include="RamDiskTests.cs" />
     <Compile Include="HealthyDietMenuGeneratorTestsFirefox.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
